<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.geektest2.UniversesFragment">

    <Button
        android:id="@+id/lotr_btn"
        android:text="@string/lotr_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/potter_btn"
        android:text="@string/potter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/dota_btn"
        android:text="@string/dota_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/marvel_btn"
        android:text="@string/marvel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/dc_btn"
        android:text="@string/dc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/random_btn"
        android:text="@string/random_select_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
