<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.geektest2.MenuFragment">


    <TextView
        android:layout_gravity="center"
        android:text="@string/welcome_text_view"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/select_univ_btn_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/univ_select_txtview" />
    <Button
        android:id="@+id/stats_btn"
        android:text="@string/stats_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
